# swarmdev

./: .gitignore  MANIFEST.in  MCP-SERVERS.md  README.md  SWARMDEV-README.md  example_goals.md  mcp_config.json  package-lock.json  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py  swarmdev_cli.py  test_mcp_direct.py  test_mcp_interaction.py  test_shell_executor.py  workflow_analysis.md
.github/workflows/: build-and-publish.yml  docker-build.yml
agent_work/: analysis_iteration_0.md
docs/: README.md
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md  creative-expansion.md
docs/architecture/workflows/: iteration-workflow.md  workflows_architecture.md
docs/cli/: README.md  build_progress.md  enhanced-build-progress.md
docs/configuration/: MODEL_AWARE_CONFIG.md  README.md  defaults.md  environment_variables.md  google_provider.md
docs/getting-started/: examples.md  installation.md  quick-start.md
docs/user-guide/: build-progress.md  cli-reference.md  workflows.md
examples/: MCP_DEBUGGING.md  README.md  basic_usage.md  file_cleanup_demo.py  full_platform_demo.py  goal_storage_builder_demo.py  interactive_agent_demo.py  mcp_config.json  mcp_config_complete.json  mcp_config_enhanced.json  mcp_setup_guide.md  sample_mcp_config.json  swarmdev_config.json
goals/: goal_20250530_234450.txt
goals/versions/goal_20250530_215753/: v1.txt
goals/versions/goal_20250530_224845/: v1.txt
goals/versions/goal_20250530_230743/: v1.txt
goals/versions/goal_20250530_231500/: v1.txt
goals/versions/goal_20250530_232248/: v1.txt
goals/versions/goal_20250530_234612/: v1.txt
scripts/: README.md  debug_containers.py  demo_enhanced_agent.py  setup_mcp_servers.py  test_agents.py  test_collaborative_agent.py  test_mcp_installation.py  test_mcp_interaction.py
src/swarmdev/: __init__.py  cli.py
src/swarmdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/swarmdev/bundled_mcp/memory/: Dockerfile  package.json
src/swarmdev/bundled_mcp/memory/src/: index.ts
src/swarmdev/bundled_mcp/sequential-thinking/: .dockerignore  package.json  tsconfig.json
src/swarmdev/bundled_mcp/sequential-thinking/src/: index.ts
src/swarmdev/bundled_mcp/servers/src/filesystem/: package-lock.json
src/swarmdev/bundled_mcp/servers/src/memory/: package-lock.json
src/swarmdev/bundled_mcp/servers/src/sequentialthinking/: package-lock.json
src/swarmdev/goal_processor/: __init__.py  builder.py  storage.py
src/swarmdev/interactive_agent/: __init__.py  agent.py  collaborative_agent.py  enhanced_agent.py  llm_agent.py
src/swarmdev/mcp_tools/: __init__.py  shell_executor.py
src/swarmdev/scripts/: .placeholder  fix_docker_group.py  pull_mcp_images.py  pull_mcp_images.py.backup
src/swarmdev/swarm_builder/: __init__.py
src/swarmdev/swarm_builder/agents/: __init__.py  base_agent.py  specialized_agents.py  specialized_agents.py.bak
src/swarmdev/swarm_builder/orchestration/: __init__.py  orchestrator.py
src/swarmdev/swarm_builder/workflows/: __init__.py  workflow_definitions.py
src/swarmdev/utils/: __init__.py  agent_logger.py  blueprint_manager.py  llm_provider.py  log_analyzer.py  mcp_manager.py  mcp_metrics.py  memory_context_manager.py
